# studyingDataStructures

./: CMakeLists.txt  README.md
05_hashTable/: CMakeLists.txt  README.md
05_hashTable/hashTable/: hashTable.h
05_hashTable/linkedList/: linkedList.h
05_hashTable/note/: hash_table.xopp
1-stack-pilha/: CMakeLists.txt  README.md  main.cpp  stack.h
1-stack-pilha/note/: 2024-11-24-Note-12-38.xopp
2-queue-fila/: CMakeLists.txt  README.md  main.cpp
2-queue-fila/queue/: queue.h
2_queue_fila/: CMakeLists.txt  main.cpp
2_queue_fila/note/: 2024-11-29-Note-21-29.xopp
2_queue_fila/queue/: queue.cpp  queue.h
3-linkedList-ListaEncadeada/: CMakeLists.txt  main.cpp
3_linkedList/: CMakeLists.txt
3_linkedList/linkedList/: linkedList.h
4-recursion-factorial/: CMakeLists.txt
4-recursion-sum-of-a-list/: CMakeLists.txt
4_recursion_factorial/: README.md  main.cpp
4_recursion_sum_of_a_list/: README.md  main.cpp
5_hashTable/: CMakeLists.txt  README.md  main.cpp
5_hashTable/hashTable/: hashTable.h
5_hashTable/linkedList/: linkedList.h
